// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typography/campaign fonts objects should match snapshot for all fonts objects 1`] = `
{
  "extraLarge": {
    "@media (min-width: 1024px)": {
      "fontSize": "96px",
      "lineHeight": "0.91em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(44px + 4vw)",
    },
    "className": "umd-campaign-extralarge",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "44px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
    "textWrap": "pretty",
  },
  "extraSmall": {
    "className": "umd-campaign-extrasmall",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "32px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.94em",
  },
  "large": {
    "@media (min-width: 1024px)": {
      "fontSize": "80px",
      "lineHeight": "0.91em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(44px + 2.66vw)",
    },
    "className": "umd-campaign-large",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "44px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
    "textWrap": "pretty",
  },
  "maximum": {
    "@media (min-width: 1024px)": {
      "fontSize": "120px",
      "lineHeight": "0.9em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(80px + 2vw)",
    },
    "className": "umd-campaign-maximum",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "44px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
    "textWrap": "pretty",
  },
  "medium": {
    "@media (min-width: 1024px)": {
      "fontSize": "64px",
      "letterSpacing": "0.02em",
      "lineHeight": "0.94em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(44px + 1.33vw)",
    },
    "className": "umd-campaign-medium",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "44px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
    "textWrap": "pretty",
  },
  "small": {
    "@media (min-width: 1024px)": {
      "fontSize": "44px",
      "letterSpacing": "0.02em",
      "lineHeight": "0.91em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(32px + 1.33vw)",
    },
    "className": "umd-campaign-small",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "32px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.94em",
  },
}
`;

exports[`typography/campaign should match snapshot 1`] = `
{
  "compose": [Function],
  "extraSmall": {
    "className": "umd-campaign-extrasmall",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "32px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.94em",
  },
  "extralarge": {
    "@media (min-width: 1024px)": {
      "fontSize": "96px",
      "lineHeight": "0.91em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(44px + 4vw)",
    },
    "className": "umd-campaign-extralarge",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "44px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
    "textWrap": "pretty",
  },
  "fonts": {
    "extraLarge": {
      "@media (min-width: 1024px)": {
        "fontSize": "96px",
        "lineHeight": "0.91em",
      },
      "@media (min-width: 650px)": {
        "fontSize": "calc(44px + 4vw)",
      },
      "className": "umd-campaign-extralarge",
      "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
      "fontSize": "44px",
      "fontStyle": "italic",
      "fontWeight": "700",
      "letterSpacing": "0.02em",
      "lineHeight": "0.91em",
      "textWrap": "pretty",
    },
    "extraSmall": {
      "className": "umd-campaign-extrasmall",
      "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
      "fontSize": "32px",
      "fontStyle": "italic",
      "fontWeight": "700",
      "letterSpacing": "0.02em",
      "lineHeight": "0.94em",
    },
    "large": {
      "@media (min-width: 1024px)": {
        "fontSize": "80px",
        "lineHeight": "0.91em",
      },
      "@media (min-width: 650px)": {
        "fontSize": "calc(44px + 2.66vw)",
      },
      "className": "umd-campaign-large",
      "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
      "fontSize": "44px",
      "fontStyle": "italic",
      "fontWeight": "700",
      "letterSpacing": "0.02em",
      "lineHeight": "0.91em",
      "textWrap": "pretty",
    },
    "maximum": {
      "@media (min-width: 1024px)": {
        "fontSize": "120px",
        "lineHeight": "0.9em",
      },
      "@media (min-width: 650px)": {
        "fontSize": "calc(80px + 2vw)",
      },
      "className": "umd-campaign-maximum",
      "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
      "fontSize": "44px",
      "fontStyle": "italic",
      "fontWeight": "700",
      "letterSpacing": "0.02em",
      "lineHeight": "0.91em",
      "textWrap": "pretty",
    },
    "medium": {
      "@media (min-width: 1024px)": {
        "fontSize": "64px",
        "letterSpacing": "0.02em",
        "lineHeight": "0.94em",
      },
      "@media (min-width: 650px)": {
        "fontSize": "calc(44px + 1.33vw)",
      },
      "className": "umd-campaign-medium",
      "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
      "fontSize": "44px",
      "fontStyle": "italic",
      "fontWeight": "700",
      "letterSpacing": "0.02em",
      "lineHeight": "0.91em",
      "textWrap": "pretty",
    },
    "small": {
      "@media (min-width: 1024px)": {
        "fontSize": "44px",
        "letterSpacing": "0.02em",
        "lineHeight": "0.91em",
      },
      "@media (min-width: 650px)": {
        "fontSize": "calc(32px + 1.33vw)",
      },
      "className": "umd-campaign-small",
      "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
      "fontSize": "32px",
      "fontStyle": "italic",
      "fontWeight": "700",
      "letterSpacing": "0.02em",
      "lineHeight": "0.94em",
    },
  },
  "large": {
    "@media (min-width: 1024px)": {
      "fontSize": "80px",
      "lineHeight": "0.91em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(44px + 2.66vw)",
    },
    "className": "umd-campaign-large",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "44px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
    "textWrap": "pretty",
  },
  "maximum": {
    "@media (min-width: 1024px)": {
      "fontSize": "120px",
      "lineHeight": "0.9em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(80px + 2vw)",
    },
    "className": "umd-campaign-maximum",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "44px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
    "textWrap": "pretty",
  },
  "medium": {
    "@media (min-width: 1024px)": {
      "fontSize": "64px",
      "letterSpacing": "0.02em",
      "lineHeight": "0.94em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(44px + 1.33vw)",
    },
    "className": "umd-campaign-medium",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "44px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
    "textWrap": "pretty",
  },
  "small": {
    "@media (min-width: 1024px)": {
      "fontSize": "44px",
      "letterSpacing": "0.02em",
      "lineHeight": "0.91em",
    },
    "@media (min-width: 650px)": {
      "fontSize": "calc(32px + 1.33vw)",
    },
    "className": "umd-campaign-small",
    "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
    "fontSize": "32px",
    "fontStyle": "italic",
    "fontWeight": "700",
    "letterSpacing": "0.02em",
    "lineHeight": "0.94em",
  },
}
`;

exports[`typography/campaign size objects should have correctly defined campaign text sizes 1`] = `
{
  "@media (min-width: 1024px)": {
    "fontSize": "120px",
    "lineHeight": "0.9em",
  },
  "@media (min-width: 650px)": {
    "fontSize": "calc(80px + 2vw)",
  },
  "className": "umd-campaign-maximum",
  "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
  "fontSize": "44px",
  "fontStyle": "italic",
  "fontWeight": "700",
  "letterSpacing": "0.02em",
  "lineHeight": "0.91em",
  "textWrap": "pretty",
}
`;

exports[`typography/campaign size objects should have correctly defined campaign text sizes 2`] = `
{
  "@media (min-width: 1024px)": {
    "fontSize": "96px",
    "lineHeight": "0.91em",
  },
  "@media (min-width: 650px)": {
    "fontSize": "calc(44px + 4vw)",
  },
  "className": "umd-campaign-extralarge",
  "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
  "fontSize": "44px",
  "fontStyle": "italic",
  "fontWeight": "700",
  "letterSpacing": "0.02em",
  "lineHeight": "0.91em",
  "textWrap": "pretty",
}
`;

exports[`typography/campaign size objects should have correctly defined campaign text sizes 3`] = `
{
  "@media (min-width: 1024px)": {
    "fontSize": "80px",
    "lineHeight": "0.91em",
  },
  "@media (min-width: 650px)": {
    "fontSize": "calc(44px + 2.66vw)",
  },
  "className": "umd-campaign-large",
  "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
  "fontSize": "44px",
  "fontStyle": "italic",
  "fontWeight": "700",
  "letterSpacing": "0.02em",
  "lineHeight": "0.91em",
  "textWrap": "pretty",
}
`;

exports[`typography/campaign size objects should have correctly defined campaign text sizes 4`] = `
{
  "@media (min-width: 1024px)": {
    "fontSize": "64px",
    "letterSpacing": "0.02em",
    "lineHeight": "0.94em",
  },
  "@media (min-width: 650px)": {
    "fontSize": "calc(44px + 1.33vw)",
  },
  "className": "umd-campaign-medium",
  "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
  "fontSize": "44px",
  "fontStyle": "italic",
  "fontWeight": "700",
  "letterSpacing": "0.02em",
  "lineHeight": "0.91em",
  "textWrap": "pretty",
}
`;

exports[`typography/campaign size objects should have correctly defined campaign text sizes 5`] = `
{
  "@media (min-width: 1024px)": {
    "fontSize": "44px",
    "letterSpacing": "0.02em",
    "lineHeight": "0.91em",
  },
  "@media (min-width: 650px)": {
    "fontSize": "calc(32px + 1.33vw)",
  },
  "className": "umd-campaign-small",
  "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
  "fontSize": "32px",
  "fontStyle": "italic",
  "fontWeight": "700",
  "letterSpacing": "0.02em",
  "lineHeight": "0.94em",
}
`;

exports[`typography/campaign size objects should have correctly defined campaign text sizes 6`] = `
{
  "className": "umd-campaign-extrasmall",
  "fontFamily": "'Barlow Condensed', Arial Narrow, sans-serif",
  "fontSize": "32px",
  "fontStyle": "italic",
  "fontWeight": "700",
  "letterSpacing": "0.02em",
  "lineHeight": "0.94em",
}
`;
